--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+ 
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+ img{
+  position: absolute;
+  top:2px;
+  left: -100px;
+  opacity: 0.6;
+
+  
+}
+.container{
+  overflow: hidden;
+  
 }
